src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/shadow-selection-detach-crash-expected.txt
CONSOLE ERROR: line 15: Uncaught TypeError: out.createShadowRoot is not a function
Garbage collection of Selection objects with shorter lifetimes must not crash.

On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".

FAIL Unexpected error: Uncaught TypeError: out.createShadowRoot is not a function
FAIL successfullyParsed should be true. Was false.

TEST COMPLETE

